[gd_scene load_steps=13 format=2]

[ext_resource path="res://golem1_anim.tres" type="SpriteFrames" id=1]
[ext_resource path="res://enemigo.gd" type="Script" id=2]
[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/label_HP.png" type="Texture" id=4]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/label_EP.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 28
extra_spacing_bottom = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 18
extra_spacing_bottom = -3
font_data = ExtResource( 5 )

[node name="enemigo" type="AnimatedSprite"]
editor/display_folded = true
position = Vector2( 840, 501 )
scale = Vector2( 0.25, 0.25 )
frames = ExtResource( 1 )
animation = "Idle"
frame = 4
playing = true
flip_h = true
script = ExtResource( 2 )

[node name="valores_enemigos" type="MarginContainer" parent="."]
margin_left = -1160.67
margin_top = 243.253
margin_right = -319.67
margin_bottom = 305.253
rect_scale = Vector2( 2, 2 )

[node name="constantes" type="HBoxContainer" parent="valores_enemigos"]
margin_right = 841.0
margin_bottom = 61.0

[node name="vida" type="VBoxContainer" parent="valores_enemigos/constantes"]
margin_right = 500.0
margin_bottom = 61.0

[node name="barra1" type="HBoxContainer" parent="valores_enemigos/constantes/vida"]
margin_right = 500.0
margin_bottom = 53.0

[node name="contenedor" type="MarginContainer" parent="valores_enemigos/constantes/vida/barra1"]
margin_right = 100.0
margin_bottom = 53.0

[node name="fondo" type="NinePatchRect" parent="valores_enemigos/constantes/vida/barra1/contenedor"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 3 )

[node name="tipo" type="TextureRect" parent="valores_enemigos/constantes/vida/barra1/contenedor/fondo"]
margin_right = 50.0
margin_bottom = 53.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="valor" type="Label" parent="valores_enemigos/constantes/vida/barra1/contenedor/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2
valign = 2

[node name="PS" type="TextureProgress" parent="valores_enemigos/constantes/vida/barra1"]
margin_left = 104.0
margin_right = 500.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="magia" type="VBoxContainer" parent="valores_enemigos/constantes"]
visible = false
margin_left = 504.0
margin_right = 756.0
margin_bottom = 61.0

[node name="barra2" type="HBoxContainer" parent="valores_enemigos/constantes/magia"]
margin_right = 252.0
margin_bottom = 40.0

[node name="contenedor" type="MarginContainer" parent="valores_enemigos/constantes/magia/barra2"]
margin_bottom = 40.0

[node name="fondo" type="NinePatchRect" parent="valores_enemigos/constantes/magia/barra2/contenedor"]
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="tipo" type="TextureRect" parent="valores_enemigos/constantes/magia/barra2/contenedor/fondo"]
margin_right = 50.0
margin_bottom = 40.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="valor" type="Label" parent="valores_enemigos/constantes/magia/barra2/contenedor/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "50"
align = 2
valign = 1

[node name="PM" type="TextureProgress" parent="valores_enemigos/constantes/magia/barra2"]
margin_left = 4.0
margin_right = 252.0
margin_bottom = 40.0
value = 75.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="potis" type="HBoxContainer" parent="valores_enemigos"]
margin_right = 841.0
margin_bottom = 61.0

